--- a/style.css
+++ b/style.css
@@ -80,6 +80,35 @@ body {
   top: 50px;
 }
 
+.input-div {
+  position: absolute;
+  top: 150px;
+  right: 200px;
+  font-size: 2rem;
+}
+
+.popup {
+  position: absolute;
+  height: 80vh;
+  width: 80vw;
+  background-color: #808080f2;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  top: 20px;
+}
+
+.div-helper {
+  height: 90%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  padding: 1rem;
+}
+
 @media (max-width: 768px) {
   .bxd-logo {
     padding-left: -120px;
